offers section height issue on mobile

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -167,7 +167,7 @@
             display: grid;
             overflow: hidden;
             grid-template-columns: 100% 100% 100% 100% 100%;
-            grid-template-rows: 169px;
+            grid-template-rows: 200px;
             margin: 10px;
             
             
